# CG2

./: .gitignore  CG2.kdev4  CMakeLists.txt  README.md
.kdev4/: CG2.kdev4
.run/: task0_framework (Debug).run.xml  task1_implicits (Debug).run.xml  task34_animation (Debug).run.xml  vr_lab (Debug).run.xml  vr_lab_exe (Debug).run.xml  vr_test (Debug).run.xml  vr_test_exe (Debug).run.xml
data/Implicits/: difference.isd  distance_surface.isd  intersection.isd  union.isd
exercise0/: cgv_demo.cxx  config.def  cubes_drawable.cxx  readme.txt
exercise1/: CG2_exercise1.pj  CMakeLists.txt  box.cxx  cgv_demo.cxx  config.def  csg.cxx  cubes_drawable.cxx  cubes_fractal.cxx  cylinder.cxx  distance_surface.cxx  sphere.cxx  task11.isd
exercise2/: CMakeLists.txt  config.def  scene.cxx  transform.cxx
exercise34/: .Bone.cxx.kate-swp  Bone.cxx  Bone.h  SkeletonViewer.cxx  SkeletonViewer.h
exercise45/: Bone.cxx  CG2_exercise45.pj  CMakeLists.txt  Mesh.cxx  SkeletonViewer.cxx  common.h
solution/: config_ex1.cfg  config_ex2.cfg  run_exercise0.bat  run_exercise0.sh  run_exercise1.bat  run_exercise1.sh  run_exercise2.bat  run_exercise2.sh  run_exercise34.bat  run_exercise34.sh  run_exercise45.bat  run_exercise45.sh
solution/glsl/: sphere.glfs  sphere.glpr
